--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@mightymeld/runtime": "^0.1.45-rc.2",
+    "@mightymeld/runtime": "latest",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
